--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 
 /*general styles*/
 :root {
-	--body-color: #e5e5e5;
+	--body-color: #f2f4f7;
 	--main-green: #00d36d;
 	--main-white: #ffffff;
 	--main-black: #000000;
@@ -231,6 +231,7 @@ a:hover {
 	flex-wrap: wrap;
 	width: 990px;
 	margin: 0;
+	margin-bottom: 30px;
 	padding: 0;
 	list-style-type: none;
 }
@@ -254,4 +255,73 @@ a:hover {
 .active-hero-link .hero-link {
 	color: var(--main-white);
 	background-color: var(--main-green);
+}
+/*form*/
+.hero-form-group {
+	width: 310px;
+	position: relative;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.hero-radio {
+	position: absolute;
+	z-index: 2;
+	opacity: 0;
+	width: 63%;
+	cursor: pointer;
+}
+.first-radio {
+	left: 0;
+}
+.second-radio {
+	right: 0;
+}
+.hero-radio:checked {
+	z-index: 1;
+	cursor: default;
+}
+.first-radio:checked ~ .controller .coin {
+	margin-left: 0;
+}
+.first-radio:not(:checked) ~ .controller .coin {
+	margin-left: 34px;
+}
+.first-radio:checked + .hero-checkbox-label {
+	color: var(--main-green);
+}
+.second-radio:checked + .hero-checkbox-label {
+	color: var(--main-green);
+}
+.hero-checkbox-label {
+	display: inline-block;
+	width: 102px;
+	font-size: 18px;
+	line-height: 24px;
+	text-align: center;
+	cursor: pointer;
+}
+.controller {
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	display: flex;
+	align-items: center;
+	width: 58px;
+	height: 24px;
+	padding: 2px;
+	background-color: var(--main-white);
+	border: 1px solid #e4e6e9;
+	border-radius: 12px;
+	z-index: 1;
+}
+.coin {
+	flex-shrink: 0;
+	margin-left: 0px;
+	display: inline-block;
+	width: 18px;
+	height: 18px;
+	background-color: var(--main-green);
+	border-radius: 50%;
+	transition: 0.3s ease all;
 }
