--- a/css/style.css
+++ b/css/style.css
@@ -53,8 +53,14 @@ img {
 	width: 100%;
 	height: auto;
 }
-a:hover {
-	color: var(--main-green);
+.main-button {
+	font-size: 18px;
+	line-height: 23px;
+	padding: 10px 20px;
+	text-decoration: none;
+	color: var(--main-white);
+	background-color: var(--main-green);
+	border-radius: 8px;
 }
 
 /*site-header*/
@@ -217,6 +223,7 @@ a:hover {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin-bottom: 40px;
 }
 .hero-heading {
 	margin: 0;
@@ -324,4 +331,115 @@ a:hover {
 	background-color: var(--main-green);
 	border-radius: 50%;
 	transition: 0.3s ease all;
+}
+
+/*partners*/
+.partners {
+	text-align: center;
+	margin-bottom: 120px;
+}
+.partners-list {
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0;
+	margin-right: -20px;
+	margin-bottom: 40px;
+	padding: 0;
+	list-style-type: none;
+}
+.partner {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	width: 218px;
+	margin-top: 20px;
+	margin-right: 20px;
+	padding: 20px 15px;
+	background-color: var(--main-white);
+	border-radius: 8px;
+}
+.partner__heading {
+	order: 3;
+	align-self: center;
+	margin: 0;
+	margin-top: 35px;
+	font-size: 16px;
+	line-height: 20px;
+	font-weight: 500;
+	opacity: 0.5;
+}
+.partner__percent {
+	margin: 0;
+	margin-bottom: 4px;
+	font-size: 24px;
+	line-height: 20px;
+	font-weight: 500;
+}
+.partner__text {
+	margin: 0;
+	margin-bottom: 27px;
+	font-size: 12px;
+	line-height: 15px;
+	opacity: 0.4;
+}
+.partner__img {
+	align-self: center;
+	width: 120px;
+	height: 120px;
+	border-radius: 50%;
+}
+
+/*opportunity-section*/
+.opportunity-section {
+	margin-bottom: 120px;
+	text-align: center;
+}
+.opportunity__heading {
+	width: 715px;
+	margin: 0 auto;
+	font-size: 32px;
+	line-height: 40px;
+	font-weight: 500;
+	text-align: center;
+}
+.opportunities {
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0;
+	margin-top: 20px;
+	margin-right: -21px;
+	margin-bottom: 40px;
+	padding: 0;
+	list-style-type: none;
+}
+.opportunity {
+	width: 377px;
+	margin-right: 20px;
+	margin-top: 20px;
+	border-radius: 6px;
+}
+.opportunity__img {
+	display: block;
+	margin-bottom: 15px;
+}
+.opportunity-bottom {
+	display: flex;
+}
+.opportunity__logo {
+	width: 50px;
+	height: 50px;
+	margin-right: 15px;
+	border-radius: 50%;
+}
+.opportunity__company-name {
+	margin: 0;
+	margin-bottom: 4px;
+	font-size: 14px;
+	line-height: 20px;
+	opacity: 0.5;
+}
+.opportunity__company-text {
+	margin: 0;
+	font-size: 18px;
+	line-height: 1.3;
 }
